[package]
name = "barre"
version = "0.1.0"
authors = ["Elf M. Sternberg <elf.sternberg@gmail.com>"]
description = "An implementation of Matt Might's Parsing With Derivatives."
# edition = "2018"

[dependencies]
arena = { path = "arena" }
dot = "0.1.4"

[dev-dependencies]
rand = "0.5.5"

[[test]]
name = "test"
path = "test/mod.rs"
